--- a/react-components04/src/App.css
+++ b/react-components04/src/App.css
@@ -17,10 +17,12 @@ ul{
     margin: 10px;
     padding: 20px;
     border: 1px solid gray;
+    border-radius: 10px;
 }
 .titulo{
     background-color: rgb(28, 156, 116);
     font-size: 18px;
     margin-bottom: 8px;
     padding: 5px;
+    border-radius: 8px;
 }
